--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>TESTE</title>
+	<title>jamalcc.github.io</title>
 </head>
 <body>
+	<h1>Hello World</h1>
+	<p>I'm hosted with GitHub Pages.</p>
 
 </body>
 </html>
